chore: 빌드 jar 파일 이름 수정

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,7 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    archiveFileName = 'recommendation.jar' // 생성될 jar 파일 이름
+}
