--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,2 +1,14 @@
 server:
   port: 8084
+
+user-service:
+  url: ${USER_URL}
+
+news-service:
+  url: ${NEWS_URL}
+
+spring:
+  data:
+    redis:
+      host: localhost
+      port: 6379
