chore(ci): remove extra characters from ECR_REPOSITORY_NAME

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
 # 3. 서비스에 따라 달라지는 변수들만 여기서 정의
 variables:
   SONAR_PROJECT_KEY: "recommendation-service"         # SonarQube 프로젝트 키는 서비스마다 다름
-  ECR_REPOSITORY_NAME: "newords-recommendation# 4. 실제 실행할 작업들은 템플릿을 상속(extends)받아 정의
+  ECR_REPOSITORY_NAME: "newords-recommendation" # 4. 실제 실행할 작업들은 템플릿을 상속(extends)받아 정의
 build:
   extends: .build_template
   rules:
