chore(ci): Add service name variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ stages:
 variables:
   SONAR_PROJECT_KEY: "recommendation-service"         # SonarQube 프로젝트 키는 서비스마다 다름
   ECR_REPOSITORY_NAME: "newords-recommendation" # 4. 실제 실행할 작업들은 템플릿을 상속(extends)받아 정의
+  SERVICE_NAME: "recommendation-service"
 build:
   extends: .build_template
   rules:
