--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,16 @@
 server:
   port: 8084
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  endpoint:
+    health:
+      probes:
+        enabled: true  
+
 user-service:
   url: ${USER_URL_PROD}
 
@@ -10,5 +20,5 @@ news-service:
 spring:
   data:
     redis:
-      host: localhost
+      host: 10.0.11.22
       port: 6379
